# dqm

./: .gitignore  .readthedocs.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  publish.yml
build_tools/: build_wheels.sh
cpp/: CMakeLists.txt  Makefile  array3d.cpp  array3d.h  basis.cpp  basis.h  dqm_python.cpp  dqm_python.sln  dqm_python.vcxproj  dqm_python.vcxproj.filters  matrix.h  operators.cpp  operators.h  trajectories.cpp  trajectories.h  utils.cpp  utils.h
docs/: api.rst  conf.py  faq.rst  index.rst  installation.rst  links.rst  quick_start.rst  requirements.txt  usage.rst  user_guide.rst  value_of_animation.rst
dqm/: .ruff.toml  DQM.py  DQMTests.py  UtilTests.py  __init__.py  dqm_pure_python.py  utils.py
notebooks/: demo_real_data_1.ipynb  quick_start.ipynb
tests/: test_dqm.py  test_util.py
