[build-system]
requires = ["scikit-build-core>=0.5", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "pydqm"
version = "0.1.3"
authors = [{name = "Zander Teller", email = "zander.teller@gmail.com"}]
description = "Dynamic Quantum Mapping"
readme = "README.rst"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
keywords = ["dimensionality reduction", "visualization", "animation", "data science"]

[project.urls]
Homepage = "https://github.com/zanderteller/dqm"
Documentation = "https://dqm.readthedocs.io"
Repository = "https://github.com/zanderteller/dqm"
Issues = "https://github.com/zanderteller/dqm/issues"
Changelog = "https://github.com/zanderteller/dqm/releases"

[project.optional-dependencies]
viz = ["jupyterlab", "plotly", "matplotlib"]
dev = ["pytest", "ruff"]

[tool.scikit-build]
cmake.source-dir = "cpp"
cmake.build-type = "Release"
wheel.install-dir = "."
wheel.packages = ["dqm"]

[tool.scikit-build.cmake.define]
CMAKE_OSX_DEPLOYMENT_TARGET = "11.0"
